Fix client example and client example bundle in dev mode

--- a/demos/client-bundle-example/src/index.html
+++ b/demos/client-bundle-example/src/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="procaptcha_react.main.bundle.js?render=5Fh6SXrofhT9tgPJwUDbpWEGSiSom3mkgFt2rAVdDpek2hGc"></script>
+    <script src="procaptcha_bundle.main.bundle.js?render=5FUiGh7zLC21m5gvu4kUK2qVbyPJUPUmRArQDr1csDPjqJPd"></script>
 </head>
 <body>
 <div id="procaptcha"></div>
