Remove hard coded site key

--- a/demos/client-bundle-example/src/index.html
+++ b/demos/client-bundle-example/src/index.html
@@ -16,7 +16,7 @@
             <label>Password</label>
             <input type="password" required>
         </div>
-        <div class="procaptcha" data-sitekey="5GBcyoF9cnwGD7fZoP1R5mQvJqYLQuyhzpWYNsW9vWjiFXcK"></div>
+        <div class="procaptcha" data-sitekey="YOUR_SITE_KEY"></div>
         <input type="submit" class="mui-btn mui-btn--raised">
     </form>
 </div>
