171 mimic recaptcha in procaptcha bundle (#183)
* wip

* use wrapQuery

* Parse uint8array

* add dapp_update

* Single mongo compose file

* Make getContractInfoOf script accept args

* Remove hard coded site key

* Fix block number type

* dapp account not loaded

* simplify start trigger

* fix provider_Update cli command

* Fix env vars

* use port 9230

* Update readme

* remove unused code

* Breakdown env, making db optional

* Update test types

* fix import paths

* Use new env

* set class env var

* Add qm

* dont parse config in env

* consolidate configs

* fix build

* switch to relative imports

* fix import

* Update package locks

* Add extra variables into client example webpack bundler

* Update env vars in bundle webpack

* move procaptcha type to types

* fix importd

* Fix imports

* Update dapp contract env names to be dapp site key

* Shared config for client and server. zod enums instead of TS enums

* Fix procaptcha-bundle

* fix enums in demos

--- a/demos/client-bundle-example/src/index.html
+++ b/demos/client-bundle-example/src/index.html
@@ -1,8 +1,24 @@
 <html>
 <head>
-    <script src="procaptcha_bundle.main.bundle.js?render=5FUiGh7zLC21m5gvu4kUK2qVbyPJUPUmRArQDr1csDPjqJPd"></script>
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css"/>
+    <title>Procaptcha demo: Simple page</title>
+    <script src="procaptcha_bundle.main.bundle.js" async defer></script>
 </head>
 <body>
-<div id="procaptcha"></div>
+<div class="mui-container">
+    <form action="?" class="mui-form">
+        <legend>Login</legend>
+        <div class="mui-textfield mui-textfield--float-label">
+            <label>Email Address</label>
+            <input type="email" required>
+        </div>
+        <div class="mui-textfield mui-textfield--float-label">
+            <label>Password</label>
+            <input type="password" required>
+        </div>
+        <div class="procaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+        <input type="submit" class="mui-btn mui-btn--raised">
+    </form>
+</div>
 </body>
 </html>
